// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "1") 1`] = `
"**@scope/entryfile**

***

# entry-module

## Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get entry module: (Output File Strategy "members") (Option Group "2") 1`] = `
"**@scope/entryfile**

***

# @scope/entryfile

## Classes

- [ModuleClass](entry-module/classes/ModuleClass.mdx)
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/entryfile**](../../README.mdx)

***

[@scope/entryfile](../../README.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): \`ModuleClass\`

#### Returns

\`ModuleClass\`
"
`;

exports[`EntryFiles should get module member for members: (Output File Strategy "members") (Option Group "2") 1`] = `
"[**@scope/entryfile**](../../index.mdx)

***

[@scope/entryfile](../../index.mdx) / ModuleClass

# Class: ModuleClass

## Constructors

### new ModuleClass()

> **new ModuleClass**(): \`ModuleClass\`

#### Returns

\`ModuleClass\`
"
`;

exports[`EntryFiles should get readme file: (Output File Strategy "members") (Option Group "1") 1`] = `
"[**@scope/entryfile**](README.mdx)

***

# MY README

> Some block quote

Some text.

## Readme heading

Some text.
"
`;
